@@ -33,9 +33,6 @@
     <properties>
         <cxf.el.api.version>3.0-b02</cxf.el.api.version>
         <cxf.glassfish.el.version>3.0-b01</cxf.glassfish.el.version>
-        <cxf.surefire.fork.vmargs>-XX:MaxPermSize=192m</cxf.surefire.fork.vmargs>
-        <cxf.server.launcher.vmargs>-XX:MaxPermSize=192m</cxf.server.launcher.vmargs>
-
     </properties>
     <dependencies>
         <dependency>
@@ -524,7 +521,16 @@
                     <groupId>org.apache.poi</groupId>
                     <artifactId>poi-ooxml</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcprov-jdk15</artifactId>
+                </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.skyscreamer</groupId>
@@ -573,6 +579,8 @@
                         <id>generate-sources</id>
                         <phase>generate-sources</phase>
                         <configuration>
+                            <fork>${cxf.codegenplugin.forkmode}</fork>
+                            <additionalJvmArgs>${cxf.codegen.jvmArgs}</additionalJvmArgs>
                             <sourceRoot>${basedir}/target/generated/src/main/java</sourceRoot>
                             <wadlOptions>
                                 <wadlOption>
@@ -648,6 +656,66 @@
                     <version>${cxf.jetty9.version}</version>
                 </dependency>
             </dependencies>
+        </profile>
+        <profile>
+            <id>myjava9</id>
+            <properties>
+                <cxf.server.launcher.vmargs>-ea -Xpatch:java.annotations.common=${project.basedir}/target/java9/javax.annotation-api-1.2.jar -XaddExports:java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED -XaddExports:java.base/sun.security.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED -XaddExports:java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED -XaddExports:java.xml.ws/com.sun.xml.internal.messaging.saaj.soap=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api.impl.s2j=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal.writer=ALL-UNNAMED -XaddExports:java.annotations.common/javax.annotation.security=ALL-UNNAMED -addmods java.activation,java.xml.bind,java.xml.ws,jdk.xml.bind</cxf.server.launcher.vmargs>
+                <cxf.surefire.fork.vmargs>-ea -Xpatch:java.annotations.common=${project.basedir}/target/java9/javax.annotation-api-1.2.jar -XaddExports:java.base/sun.security.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED -XaddExports:java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED -XaddExports:java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED -XaddExports:java.xml.ws/com.sun.xml.internal.messaging.saaj.soap=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api.impl.s2j=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal.writer=ALL-UNNAMED -XaddExports:java.annotations.common/javax.annotation.security=ALL-UNNAMED -addmods java.activation,java.xml.bind,java.xml.ws,jdk.xml.bind</cxf.surefire.fork.vmargs>
+            </properties>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.eclipse.jetty.websocket</groupId>
+                    <artifactId>websocket-server</artifactId>
+                    <version>${cxf.jetty9.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>javax.servlet</groupId>
+                            <artifactId>javax.servlet-api</artifactId>
+                        </exclusion>
+                    </exclusions>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-jaas</artifactId>
+                    <version>${cxf.jetty9.version}</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.10</version>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>javax.annotation</groupId>
+                                            <artifactId>javax.annotation-api</artifactId>
+                                            <type>jar</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.basedir}/target/java9</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                    <overWriteReleases>false</overWriteReleases>
+                                    <overWriteSnapshots>true</overWriteSnapshots>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
